k8s-apps/cilium-gateway/ns-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: cilium-gateway
    name: cilium-gateway
  name: cilium-gateway
