k8s-apps/cilium-gateway/gateway.yaml
# Potential workaround for ipv6 proxy prot verification fail
# https://github.com/cilium/cilium/pull/43505/changes
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns-cloudflare
  name: cilium-gateway
  namespace: cilium-gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      load-balancer.hetzner.cloud/location: fsn1
      load-balancer.hetzner.cloud/name: k8s-cilium-gateway-lb
      load-balancer.hetzner.cloud/network: k8s-network
      load-balancer.hetzner.cloud/use-private-ip: "true"
      load-balancer.hetzner.cloud/uses-proxyprotocol: "true"
      # load-balancer.hetzner.cloud/ipv6-disabled: "true"
  listeners:
    # Fallbacks
    # - name: demo-https
    #   port: 443
    #   hostname: "demo.k8s-gw.henrikgerdes.me"
    #   protocol: HTTPS
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - kind: Secret
    #         group: ""
    #         name: tls-gw-cilium-certs-demo
    #   allowedRoutes:
    #     namespaces:
    #       from: All
    # - name: demo-http
    #   allowedRoutes:
    #     namespaces:
    #       from: All
    #   hostname: "demo.k8s-gw.henrikgerdes.me"
    #   port: 80
    #   protocol: HTTP
    - name: https
      port: 443
      hostname: "*.k8s-gw.henrikgerdes.me"
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: tls-gw-cilium-certs
      allowedRoutes:
        namespaces:
          from: All
    - name: http
      allowedRoutes:
        namespaces:
          from: All
      hostname: "*.k8s-gw.henrikgerdes.me"
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  annotations:
    meta.helm.sh/release-name: cilium
    meta.helm.sh/release-namespace: kube-system
  labels:
    app.kubernetes.io/managed-by: Helm
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
  description: The default Cilium GatewayClass
  parametersRef:
    group: cilium.io
    kind: CiliumGatewayClassConfig
    name: nodeport-gateway-config
    namespace: cilium-gateway
